2013-04-18: Print Python version along with netperf version on -V.

2013-04-18: Fix python3.1 compatibility bug in gzip workaround.

2013-04-15: Release v0.5.6.

2013-04-15: Add rrul_noclassification test.

2013-04-15: Release v0.5.5.

2013-04-15: Add work-around for python2.6 version of GzipFile.

2013-04-15: Add option to disable automatic log-scaling of graphs.

2013-03-27: Add -z option to start y-axis at zero.

2013-03-27: Don't use suptitle() to draw annotation at the bottom of the plots (makes
            the annotation work in matplotlib 1.2.1).

2013-03-27: Release v0.5.3.

2013-03-27: Fix install bug in setup.py when creating packages.

2013-03-27: Release v0.5.2.

2013-03-26: Actually get the return code of a subprocess.

2013-03-26: Fix bug on aborting tests due to missing kill() stub for computing runners.

2013-03-26: Rework the way access checks are done for output files.

2013-03-18: Release v0.5.1.

2013-03-18: Compatibility fix for Python 3.1.

2013-03-18: Release v0.5.0.

2013-03-18: Do not crash if killing subprocess fails because it is already killed.

2013-03-18: Ensure compatibility with a wider range of python versions.

2013-03-18: Do not fail horribly on write permission errors.

2013-03-11: Preforking runner implementation (hopefully fixes issues on FreeBSD).

2013-03-11: Be smarter about picking a `ping` binary, trying first fping
            then falling back to straight ping.

2013-02-20: Don't crash on missing data, just print a warning.

2013-02-20: Workaround for bad exit codes on bsd.

2013-02-14: Release v0.4.2.

2013-01-25: Encode title in data set filename if set.

2013-01-22: Fix possible divide by zero error on certain data values.

2013-01-22: Get rid of the colons in the time stamps used for file names (they
            give rise to escaping headaches).

2012-12-20: Release v0.4.1.

2012-12-20: Fix cutoff logic when end cutoff value is 0.

2012-12-20: If there are missing data values when doing a CDF plot, the plot