@@ -1,3 +1,5 @@
+2013-04-20: Manual removal of temporary files to get around issues on cygwin.
+
 2013-04-18: Print Python version along with netperf version on -V.
 
 2013-04-18: Fix python3.1 compatibility bug in gzip workaround.
